--- a/server/index.html
+++ b/server/index.html
@@ -1,1 +1,8 @@
-<h1>LinkedIn Auto Liker</h1>
+<h1>LinkedIn Auto-liker</h1>
+
+<form action="/" method="POST">
+    <label for="linkedin_post">Enter Post URL: </label>
+    <input id="linkedin_post" type="text" name="postUrl" value="">
+    <button>submit</button>
+    <p id="linkedin_check"></p>
+</form> 
