added start script

--- a/server/index.html
+++ b/server/index.html
@@ -1,6 +1,7 @@
 <h1>LinkedIn Auto-liker</h1>
 
 <form action="/" method="POST">
+    <title>LinkedIn Auto Liker</title>
     <label for="linkedin_post">Enter Post URL: </label>
     <input id="linkedin_post" type="text" name="postUrl" value="">
     <button>submit</button>
