--- a/server/index.html
+++ b/server/index.html
@@ -4,6 +4,16 @@
     <title>LinkedIn Auto Liker</title>
     <label for="linkedin_post">Enter Post URL: </label>
     <input id="linkedin_post" type="text" name="postUrl" value="">
+    <label for="industry">Select Industry</label>
+    <select name="industry" id="industry">
+        <option value="influencer">Influencer Management</option>
+        <option value="venture">Venture Capitalists</option>
+        <option value="service">Service Businesses</option>
+        <option value="startup">Startups</option>
+    </select>
     <button>submit</button>
     <p id="linkedin_check"></p>
-</form> 
+</form>
+
+
+<div id="result"></div>
